# Kodept

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.gradle.kts  devenv.nix  devenv.yaml  flake.nix  git_cloud.py  gradle.properties  justfile  output.dot  readme.txt  result  settings.gradle.kts  sh.exe.stackdump  test.kd  test.out.kd
.cargo/: config.toml
00 - Исследования/: Отзыв.docx
01 - Курсовые работы/2018-2019 - Разработка динамических WEB GUI/01 - Дополнительные материалы/optimization_cp/: CMakeLists.txt
01 - Курсовые работы/2018-2019 - Разработка динамических WEB GUI/01 - Дополнительные материалы/optimization_cp/dev/: CMakeLists.txt  jugr.cpp  jugr.h
01 - Курсовые работы/2018-2019 - Разработка динамических WEB GUI/01 - Дополнительные материалы/optimization_cp/tests/test_jugr/: CMakeLists.txt
04 - ВКРы/2018-2019 - Генератор кода GBSE решателей/01 - Дополнительные материалы/gcdgen/dev/: CMakeLists.txt  caller.cpp  caller.h  collection.cpp  collection.h  cycle.cpp  cycle.h  getter.cpp  getter.h  item.cpp  item.h  jugr.cpp  jugr.h  loader.cpp  loader.h  programm_generator.cpp  programm_generator.h  solvers.h
04 - ВКРы/2018-2019 - Генератор кода GBSE решателей/01 - Дополнительные материалы/gcdgen/tests/tests_codegen/: CMakeLists.txt  main.cpp
06 - Планирование работы/: BurchaAA_26_01-28_02.docx
Core/: build.gradle.kts
Misc/: build.gradle.kts
Traversal/: build.gradle.kts
crates/: result
crates/kodept-ast/: Cargo.toml
crates/kodept-ast/src/: ast_builder.rs  block_level.rs  code_flow.rs  expression.rs  file.rs  function.rs  interning.rs  lib.rs  literal.rs  macros.rs  node_id.rs  node_properties.rs  rlt_accessor.rs  term.rs  top_level.rs  traits.rs  types.rs  uninit.rs  utils.rs  visit_side.rs
crates/kodept-ast/src/graph/: any_node.rs  changes.rs  children.rs  generic_node.rs  graph.rs  identity.rs  mod.rs  node_id.rs  node_props.rs  nodes.rs  traits.rs  tree.rs  utils.rs  visitor.rs
crates/kodept-ast/src/graph/syntax_tree/: dfs.rs  mod.rs  stage.rs  subtree.rs  utils.rs
crates/kodept-ast/src/node/: block_level.rs  code_flow.rs  expression.rs  file.rs  function.rs  literal.rs  mod.rs  term.rs  top_level.rs  types.rs
crates/kodept-ast/src/visitor/: gast.rs  mod.rs  visit_side.rs
crates/kodept-core/: Cargo.toml
crates/kodept-core/src/: code_point.rs  code_source.rs  file_name.rs  file_relative.rs  lib.rs  loader.rs
crates/kodept-core/src/structure/: mod.rs  span.rs
crates/kodept-core/src/structure/rlt/: block_level.rs  code_flow.rs  context.rs  expression.rs  file.rs  function.rs  literal.rs  mod.rs  new_types.rs  term.rs  top_level.rs  types.rs
crates/kodept-inference/: Cargo.toml
crates/kodept-inference/src/: algorithm_u.rs  algorithm_w.rs  assumption.rs  constraint.rs  language.rs  lib.rs  substitution.rs  traits.rs  type.rs
crates/kodept-interpret/: Cargo.toml
crates/kodept-interpret/src/: conc_cache.rs  convert_model.rs  lib.rs  node_family.rs  operator_desugaring.rs  program.rs  scope.rs  scope_analyzer.rs  semantic_analyzer.rs  symbol.rs  type_checker.rs  utils.rs
crates/kodept-interpret/src/typing/: impls.rs  mod.rs  store.rs  traits.rs
crates/kodept-macros/: Cargo.toml
crates/kodept-macros/src/: analyzer.rs  context.rs  erased.rs  execution.rs  lib.rs  traits.rs  transformer.rs  unrecoverable_error.rs  visit_guard.rs
crates/kodept-macros/src/analyzers/: ast_formatter.rs  ast_node.rs  empty_block_analyzer.rs  mod.rs  module_analyzer.rs  variable_uniqueness.rs
crates/kodept-macros/src/default/: ast_formatter.rs  dot_formatter.rs  mod.rs
crates/kodept-macros/src/error/: compiler_crash.rs  mod.rs  report.rs  report_collector.rs  traits.rs
crates/kodept-macros/src/transformers/: mod.rs  variable_scope.rs
crates/kodept-parse/: Cargo.toml  build.rs
crates/kodept-parse/benches/: benchmarking_file.kd  benchmarking_file1.kd  benchmarking_file2.kd  benchmarking_file3.kd  benchmarking_file4.kd  benchmarking_file5.kd  benchmarking_file6.kd  parser.rs  tokenizer.rs
crates/kodept-parse/src/: common.rs  error.rs  lib.rs  parser.rs  token_match.rs  token_stream.rs  tokenizer.rs
crates/kodept-parse/src/grammar/: compatibility.rs  kodept.pest  mod.rs  parser.rs  peg.rs  pest.rs
crates/kodept-parse/src/lalrpop/: compatibility.rs  error.rs  mod.rs  parser.rs
crates/kodept-parse/src/lalrpop/grammar/: .gitignore  kodept.lalrpop
crates/kodept-parse/src/lexer/: enums.rs  grammar.rs  mod.rs  traits.rs
crates/kodept-parse/src/nom/: error.rs  lexer.rs  mod.rs
crates/kodept-parse/src/nom/parser/: block_level.rs  code_flow.rs  expression.rs  file.rs  function.rs  literal.rs  mod.rs  operator.rs  parameter.rs  term.rs  top_level.rs  type.rs  utils.rs
crates/kodept-parse/src/parser/: block_level.rs  code_flow.rs  common.rs  expression.rs  file.rs  function.rs  literal.rs  mod.rs  nom.rs  operator.rs  parameter.rs  term.rs  top_level.rs  type.rs
crates/kodept-parse/src/peg/: compatibility.rs  error.rs  lexer.rs  mod.rs  parser.rs
crates/kodept-parse/src/pest/: error.rs  kodept.pest  lexer.rs  mod.rs
crates/kodept-parse/tests/: testing_file.kd  tokenizer.rs
crates/slotgraph/: Cargo.toml
crates/slotgraph/src/: export.rs  graph.rs  key.rs  lib.rs  parts.rs  subgraph.rs
crates/slotgraph/src/dag/: child_iter.rs  container.rs  detach_iter.rs  mod.rs  petgraph_impls.rs  petgraph_iter.rs
crates/slotgraph/tests/: mod.rs
crates/visita/: .gitignore  Cargo.toml  LICENSE  README.md
crates/visita/examples/: multiple_families.rs  simple.rs
crates/visita/src/: lib.rs  macros.rs  vec_extensions.rs
docs/: .gitignore  G7-32.sty  bibliography.bib  devenv.nix  edurk6_rpt_2023_rk6_75b_nikitinvl.bbl  edurk6_rpt_2023_rk6_75b_nikitinvl.glg  edurk6_rpt_2023_rk6_75b_nikitinvl.glg-abr  edurk6_rpt_2023_rk6_75b_nikitinvl.glo-abr  edurk6_rpt_2023_rk6_75b_nikitinvl.gls-abr  edurk6_rpt_2023_rk6_75b_nikitinvl.ist  intro.tex  shell.nix
examples/: base.kd  church.kd  fibonacci.kd  rule110.kd  test.kd
kotest-extensions/: build.gradle.kts
rndhpc_txb_Research/: abrev.tex  (+9 more)
(+955 files in other folders)
