[package]
name = "kodept"
version = "0.2.0"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.75.0"
exclude = ["docs"]

[workspace]
members = [
    ".",
    "crates/kodept-core",
    "crates/kodept-parse",
    "crates/kodept-inference",
    "crates/kodept-ast",
    "crates/kodept-macros",
    "crates/kodept-interpret"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
nom = "7.1"
thiserror = "1.0"
extend = "1.2"
itertools = "0.12"
id_tree = "1.8.0"
tracing = "0.1.40"

[workspace.dependencies.derive_more]
version = "0.99"
features = ["display", "into", "from", "deref", "deref_mut", "constructor", "try_into", "is_variant"]

[workspace.lints]
clippy.suspicious = "deny"
clippy.correctness = "deny"
clippy.complexity = "warn"
clippy.style = "warn"
clippy.perf = "warn"
clippy.unwrap_used = "deny"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
codespan-reporting = "0.11.1"
derive_more.workspace = true
dhat = { version = "0.3", optional = true }
extend.workspace = true
id_tree.workspace = true
itertools.workspace = true
nom.workspace = true
nom-supreme = "0.8.0"
petgraph = "0.6.4"
rayon = { version = "1.10.0" }
serde_json = "1.0.107"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.17"

[dependencies.kodept-core]
path = "crates/kodept-core"
version = "0.2"

[dependencies.kodept-parse]
path = "crates/kodept-parse"
version = "0.1"

[dependencies.kodept-ast]
path = "crates/kodept-ast"
version = "0.3"
features = ["serde"]

[dependencies.kodept-macros]
path = "crates/kodept-macros"
version = "0.1"

[dependencies.kodept-interpret]
path = "crates/kodept-interpret"
version = "0.1"

[features]
profiler = ["dep:dhat"]

[profile.profiler]
debug = true
inherits = "release"

[profile.bench]
opt-level = 3
lto = false

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
panic = 'unwind'
rpath = false
