[package]
name = "kodept-ast"
version = "0.3.0"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.76.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "slotgraph/serde", "dep:once_cell_serde"]

[dependencies]
derive_more.workspace = true
serde = { version = "1.0.188", optional = true, features = ["derive"] }
tracing = "0.1.37"
paste = "1.0.14"
qcell = "0.5.4"
slotgraph = { path = "../slotgraph" }
slotmap = "1.0.7"
#strum = "0.26.2"
once_cell_serde = { version = "1.17.1", optional = true, features = ["serde"] }
smallvec = "1.13.2"

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dev-dependencies]
rstest = "0.19.0"
