[package]
name = "kodept-ast"
version = "0.4.1"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.76.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "slotgraph/serde", "dep:once_cell_serde"]

[dependencies]
constcat = "0.5.0"
derive_more.workspace = true
once_cell_serde = { version = "1.17.1", optional = true, features = ["serde"] }
paste = "1.0.15"
qcell = "0.5.4"
ref-cast = "1.0.23"
serde = { version = "1", optional = true, features = ["derive"] }
slotgraph = { path = "../slotgraph", version = "0.1" }
slotmap = "1.0.7"
smallvec = "1.13.2"
strum = { version = "0.26.2", features = ["derive"] }
tracing.workspace = true

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dev-dependencies]
rstest = "0.19.0"
