[package]
name = "kodept-ast"
version = "0.5.0"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.80.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "slotgraph/serde"]
parallel = ["dep:rayon"]

[dependencies]
constcat = "0.5.0"
derive_more.workspace = true
interner = "0.2.1"
paste = "1.0.15"
ref-cast = "1.0.23"
replace_with = "0.1.7"
slotgraph = { path = "../slotgraph", version = "0.1" }
slotmap = "1.0.7"
strum = { version = "0.26.2", features = ["derive"] }
tracing.workspace = true

serde = { version = "1", optional = true, features = ["derive"] }
rayon = { version = "1.10.0", optional = true }

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dev-dependencies]
rstest = "0.19.0"
