[package]
name = "kodept-core"
version = "0.2.2"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
size-of = ["dep:size-of"]

[dependencies]
derive_more = { version = "0.99", features = ["constructor", "display", "from", "into"] }
itertools.workspace = true
pathdiff = "0.2.1"
size-of = { version = "0.1.5", optional = true }
thiserror = { workspace = true }
tracing = "0.1.37"

[dev-dependencies]
tempfile = "3.7.0"
