[package]
name = "kodept-core"
version = "0.2.2"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/tree/rust"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.74.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
size-of = ["dep:size-of"]

[dependencies]
derive_more.workspace = true
itertools.workspace = true
pathdiff = "0.2.1"
size-of = { version = "0.1.5", optional = true }
thiserror = { workspace = true }
tracing = "0.1.37"

[dev-dependencies]
tempfile = "3.7.0"
