[package]
name = "kodept-inference"
version = "0.1.1"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derive_more = { version = "0.99", features = ["from", "display"] }
itertools.workspace = true
nonempty-collections = "0.1.1"
