[package]
name = "kodept-inference"
version = "0.2.3"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.74.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more.workspace = true
itertools.workspace = true
nonempty-collections = "0.2"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest = "0.19.0"
