[package]
name = "kodept-interpret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
paste = "1.0.14"
replace_with = "0.1.7"
extend = "1.2.0"
tracing = "0.1.40"

[dependencies.kodept-macros]
path = "../kodept-macros"
version = "0.1"

[dependencies.kodept-ast]
path = "../kodept-ast"
version = "0.2"

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dependencies.kodept-inference]
path = "../kodept-inference"
version = "0.1"
