[package]
name = "kodept-interpret"
version = "0.1.2"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
chashmap = "2.2.2"
derive_more.workspace = true
tracing.workspace = true
id_tree.workspace = true
itertools.workspace = true
nonempty-collections = "0.2.5"
ref-cast = "1.0.23"
slotmap = "1.0.7"

[dependencies.kodept-macros]
path = "../kodept-macros"
version = "0.1"

[dependencies.kodept-ast]
path = "../kodept-ast"
version = "0.4"

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dependencies.kodept-inference]
path = "../kodept-inference"
version = "0.2"
