[package]
name = "kodept-interpret"
version = "0.1.2"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
dashmap = "6.1.0"
derive_more.workspace = true
tracing.workspace = true
itertools.workspace = true
nonempty-collections.workspace = true
pin-project = "1.1.6"
slotgraph = { path = "../slotgraph", version = "0.1" }
thiserror.workspace = true

[dependencies.kodept-macros]
path = "../kodept-macros"
version = "0.1"

[dependencies.kodept-ast]
path = "../kodept-ast"
version = "0.5"

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dependencies.kodept-inference]
path = "../kodept-inference"
version = "0.2"
