[package]
name = "kodept-macros"
version = "0.1.6"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.74.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
extend.workspace = true
derive_more.workspace = true
tracing.workspace = true

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dependencies.kodept-ast]
path = "../kodept-ast"
version = "0.5"
