[package]
name = "kodept-parse"
version = "0.3.0"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.76.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["peg"]
enum-iter = ["dep:enum-iterator"]
peg = ["dep:peg"]
pest = ["dep:faster-pest", "dep:pest"]
trace = ["peg/trace", "dep:gag", "nom"]
nom = ["dep:nom", "dep:nom-supreme"]
parallel = ["dep:rayon"]

[dependencies]
cfg-if = "1.0.0"
derive_more.workspace = true
itertools.workspace = true
nonempty-collections = "0.2.5"
thiserror = "1.0.44"
tracing = "0.1.40"

enum-iterator = { version = "2.1.0", optional = true }
gag = { version = "1.0.0", optional = true }
nom = { workspace = true, optional = true }
nom-supreme = { version = "0.8.0", optional = true }
peg = { version = "0.8.3", optional = true }
pest = { version = "2.7.11", optional = true }
faster-pest = { version = "0.1.4", optional = true }
rayon = { version = "1.10.0", optional = true }

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dev-dependencies]
rstest = "0.19.0"
criterion = "0.5.1"
lazy_static = "1.5.0"
similar-asserts = "1.5.0"

[[bench]]
name = "tokenizer"
harness = false
required-features = ["peg", "pest", "nom", "parallel"]

[[bench]]
name = "parser"
harness = false
required-features = ["peg", "nom"]
