[package]
name = "kodept-parse"
version = "0.3.0"
edition = "2021"
authors = ["Владимир Никитин <potyras85@mail.ru>"]
description = "Simple compiler with dependent types support in mind"
repository = "https://github.com/ITesserakt/Kodept/"
categories = ["compilers"]
license = "Apache-2.0"
rust-version = "1.76.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
enum-iter = ["dep:enum-iterator"]
trace = ["peg/trace", "dep:gag"]
parallel = ["dep:rayon"]
lalrpop = ["dep:lalrpop-util"]

[dependencies]
derive_more.workspace = true
itertools.workspace = true
nonempty-collections = "0.2.5"
thiserror = "1.0.44"
tracing = "0.1.40"

nom.workspace = true
nom-supreme = "0.8.0"
peg = "0.8.3"
pest = "2.7.11"
faster-pest = "0.1.4"

enum-iterator = { version = "2.1.0", optional = true }
gag = { version = "1.0.0", optional = true }
rayon = { version = "1.10.0", optional = true }
lalrpop-util = { version = "0.21.0", optional = true, features = ["lexer"] }

[build-dependencies]
lalrpop = "0.21.0"

[dependencies.kodept-core]
path = "../kodept-core"
version = "0.2"

[dev-dependencies]
rstest = "0.19.0"
criterion = "0.5.1"
lazy_static = "1.5.0"
similar-asserts = "1.5.0"

[[bench]]
name = "tokenizer"
harness = false
required-features = ["parallel"]

[[bench]]
name = "parser"
harness = false

[[test]]
name = "tokenizer"
required-features = ["parallel"]
