[package]
name = "slotgraph"
version = "0.1.1"
edition = "2021"
authors = ["Владимир Никитин <potryas85@mail.ru>"]
description = "Graph implementation built with slotmap and petgraph"
repository = "https://github.com/ITesserakt/Kodept"
categories = ["data-structures"]
license = "Apache-2.0"
rust-version = "1.70.0"

[dependencies]
slotmap = "1.0.7"
thiserror.workspace = true
petgraph = { version = "0.6.4", default-features = false }
serde = { version = "1.0.200", optional = true }

[dev-dependencies]
rstest = "0.19.0"

[lints]
workspace = true

[features]
serde = ["dep:serde", "slotmap/serde"]
